# optiCOMBAT

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  LICENSE.txt  README.md  SECURITY.md  optiCombat.sln  shield optiCOMBAT.png.bak
.github/workflows/: ci.yml
docs/: CONFORMITE_RGPD.md  GUIDE_COMPLET.md  GUIDE_DISTRIBUTION.md  MIGRATION_WINUI3.md  README.md  SIGNATURE_PROCEDURE.md  SIGNING.md
engine/: Cargo.toml  README.md  RELEASE_CHECKLIST.md
engine/crates/bench/: Cargo.toml
engine/crates/bench/src/: main.rs
engine/crates/clamav/: Cargo.toml
engine/crates/clamav/src/: clamd.rs  lib.rs
engine/crates/correlator/: Cargo.toml
engine/crates/correlator/src/: lib.rs
engine/crates/dispatcher/: Cargo.toml
engine/crates/dispatcher/src/: lib.rs
engine/crates/dispatcher/tests/: robustness.rs
engine/crates/engine-core/: Cargo.toml
engine/crates/engine-core/src/: lib.rs
engine/crates/heuristics/: Cargo.toml
engine/crates/heuristics/src/: lib.rs
engine/crates/memory-scanner/: Cargo.toml
engine/crates/memory-scanner/src/: lib.rs
engine/crates/ml-classifier/: Cargo.toml
engine/crates/ml-classifier/src/: lib.rs
engine/crates/ml-train/: Cargo.toml
engine/crates/ml-train/corpus/: holdout.jsonl  labeled.jsonl
engine/crates/ml-train/src/: main.rs
engine/crates/opticombat-cli/: Cargo.toml
engine/crates/opticombat-cli/src/: main.rs
engine/crates/opticombat-ffi/: Cargo.toml
engine/crates/opticombat-ffi/src/: lib.rs
engine/crates/opticombat-ffi/tests/: service_flow.rs
engine/crates/pe-analysis/: Cargo.toml
engine/crates/pe-analysis/src/: lib.rs
engine/crates/platform/: Cargo.toml
engine/crates/platform/src/: lib.rs  windows_impl.rs
engine/crates/qualify/: Cargo.toml
engine/crates/qualify/src/: main.rs
engine/crates/quarantine/: Cargo.toml
engine/crates/quarantine/src/: lib.rs
engine/crates/reputation/: Cargo.toml
engine/crates/reputation/src/: lib.rs
engine/crates/sandbox/: Cargo.toml
engine/crates/sandbox/src/: lib.rs
engine/crates/scan-service/: Cargo.toml
engine/crates/scan-service/src/: lib.rs
engine/crates/updater/: Cargo.toml
engine/crates/updater/src/: lib.rs
engine/crates/yara-engine/: Cargo.toml
engine/crates/yara-engine/src/: lib.rs  parser.rs
engine/ffi-demo/: OptiCombatNative.cs  OptiCombatScanner.cs  README.md  opticombat.h  smoke.c
engine/ffi-demo/integration/: OptiCombatScanEngine.cs  README.md
engine/fuzz/: Cargo.toml  README.md
engine/fuzz/fuzz_targets/: pe_parse.rs  yara_parse.rs
installer/: build-release-setup.ps1  setup.iss  setup.iss.signing.example
optiCombat/: App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  StartupDiagnostics.cs  optiCombat.csproj
optiCombat.Application/: optiCombat.Application.csproj
optiCombat.Platform/: ProtectionPipeClient.cs  ProtectionPipeContracts.cs  ProtectionPipeJsonFraming.cs  ProtectionPipeShutdownToken.cs  ServiceHostRestartPolicy.cs  optiCombat.Platform.csproj
optiCombat.Service/: Program.cs  ProtectionWindowsService.cs  optiCombat.Service.csproj
optiCombat.Tests/: ActivityEntryTests.cs  ActivityLogServiceTests.cs  AntivirusActionResultCoordinatorTests.cs  AntivirusActionsTests.cs  AppInstallPathsTests.cs  ClamAvDatabasePathsTests.cs  ClamScanLineParserTests.cs  ClamdClientTests.cs  CloudThreatIntelServiceTests.cs  CompositeClamAvBackendTests.cs  DistractionFreeMonitorTests.cs  EicarIntegrationTests.cs  ExclusionSettingsTests.cs  ExportCoordinatorTests.cs  FileContentHashTests.cs  FreshclamConfSupportTests.cs  HeadlessScanArgumentsTests.cs  HistoryDetailCoordinatorTests.cs  HistoryThreatRemediationCoordinatorTests.cs  LocalizationServiceTests.cs  LocalizationTestCollection.cs  MainWindowStartupCoordinatorTests.cs  ManualSignatureUpdateCoordinatorTests.cs  MultiTargetScanAggregatorTests.cs  NavigationRefreshCoordinatorTests.cs  NotificationServiceTests.cs  OptiCombatEicarIntegrationTests.cs  OpticombatPrefsCollection.cs  OpticombatProtectedPathsTests.cs  OverviewProtectionStatsFormatterTests.cs  OverviewRecommendationsBuilderTests.cs  OverviewRefreshCoordinatorTests.cs  PlatformProtectionFeatureGateTests.cs  PlatformProtectionStatusServiceTests.cs  ProtectionPipeContractsTests.cs  ProtectionPipeServerTests.cs  ProtectionPipeShutdownTokenTests.cs  ProtectionScanGatewayTests.cs  ProtectionServiceHostTests.cs  ProtectionStatusEvaluatorTests.cs  (+43 more)
optiCombat.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  optiCombat.WinUI.csproj
qualification/: README.md  manifest.json
scripts/: _sign-all.cmd  _sign-all.ps1  add-defender-exclusions.ps1  build-amsi.ps1  build-engine.ps1  clean-before-publish.ps1  clean-rebuild.ps1  clear-installer-output.ps1  clear-publish-dir.ps1  ensure-dev-trust.ps1  extract-exe-icon.ps1  extract-ml-corpus.ps1  fetch-runtime-deps.ps1  generate-brand-assets.py  generate-sbom.ps1  kaspersky-exclusions-guide.ps1  prepare-release.ps1  publish-release.ps1  qualify-detection.ps1  refresh-shell-icons.ps1  restore-after-av.ps1  restore-quarantine-admin.ps1  runtime-versions.json  setup-dev-trust-admin.ps1  show-crash.ps1  sign-dev-local.ps1  sign-release.ps1  stage-amsi.ps1  stage-runtime-deps.ps1  sync-installer-icon.ps1  unblock-dev-build.ps1  validate-release-readiness.ps1  verify-publish-for-inno.ps1  verify-runtime-deps.ps1  verify-signatures.ps1
(+239 files in other folders)
