[package]
name = "ml-train"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ml-train"
path = "src/main.rs"

[dependencies]
pe-analysis = { path = "../pe-analysis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
