[package]
name = "platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Active les implémentations natives Windows (DPAPI, ReadProcessMemory).
# OFF par défaut : le cœur portable et la CI Linux/Windows par défaut ne
# compilent pas ce code spécifique plateforme.
windows-platform = ["dep:windows-sys"]

[dependencies]
sha2 = "0.10"
getrandom = { version = "0.2", features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
