[package]
name = "reputation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
sha2 = "0.10"
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }

[features]
http = ["dep:ureq"]
