[package]
name = "scan-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
dispatcher = { path = "../dispatcher" }
correlator = { path = "../correlator" }
quarantine = { path = "../quarantine" }
platform = { path = "../platform" }
